--- a/admin/offline_charge.html
+++ b/admin/offline_charge.html
@@ -48,7 +48,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">SMS Pai</a>
+            <a class="navbar-brand" href="main.html">SMS Pai</a>
         </div>
         <!-- /.navbar-header -->
 
@@ -63,7 +63,7 @@
                     <li><a href="#"><i class="fa fa-gear fa-fw"></i> 帐户设置</a>
                     </li>
                     <li class="divider"></li>
-                    <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> 退出</a>
+                    <li><a href="../pages/login.html"><i class="fa fa-sign-out fa-fw"></i> 退出</a>
                     </li>
                 </ul>
                 <!-- /.dropdown-user -->
@@ -76,10 +76,11 @@
             <div class="sidebar-nav navbar-collapse">
                 <ul class="nav" id="side-menu">
                     <li>
-                        <a href="index.html"><i class="fa  fa-fw"></i> 管理控制台</a>
+                        <a href="main.html"><i class="fa  fa-fw"></i> 管理控制台</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa  fa-fw"></i> 国内短信<span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa  fa-envelope-o fa-fw"></i> 国内短信<span
+                                class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="smstest.html">测试</a>
@@ -95,14 +96,14 @@
                     </li>
 
                     <li>
-                        <a href="#"><i class="fa fa-fw"></i> 财务<span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-cny fa-fw "></i> 财务<span class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a href="offline_charge.html">充值</a>
+                                <a href="offline_charge.html">线下充值</a>
                             </li>
-                            <li>
-                                <a href="fapiao.html">发票申请</a>
-                            </li>
+                            <!--<li>-->
+                            <!--<a href="buttons.html">发票申请</a>-->
+                            <!--</li>-->
                             <!--<li>-->
                             <!--<a href="buttons.html">日账单</a>-->
                             <!--</li>-->
@@ -111,8 +112,7 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa  fa-fw"></i> 设置<span
-                                class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-gears fa-fw"></i> 设置<span class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="sys_setting.html">系统设置</a>
@@ -124,7 +124,8 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa  fa-fw"></i> 邀请好友与分享<span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-share-alt fa-fw"></i> 邀请好友与分享<span
+                                class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="invite_friends.html">好友邀请</a>
