--- a/admin/main.html
+++ b/admin/main.html
@@ -48,7 +48,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">SMS Pai</a>
+            <a class="navbar-brand" href="main.html">SMS Pai</a>
         </div>
         <!-- /.navbar-header -->
 
@@ -63,7 +63,7 @@
                     <li><a href="#"><i class="fa fa-gear fa-fw"></i> 帐户设置</a>
                     </li>
                     <li class="divider"></li>
-                    <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> 退出</a>
+                    <li><a href="../pages/login.html"><i class="fa fa-sign-out fa-fw"></i> 退出</a>
                     </li>
                 </ul>
                 <!-- /.dropdown-user -->
@@ -76,10 +76,11 @@
             <div class="sidebar-nav navbar-collapse">
                 <ul class="nav" id="side-menu">
                     <li>
-                        <a href="index.html"><i class="fa  fa-fw"></i> 管理控制台</a>
+                        <a href="main.html"><i class="fa  fa-fw"></i> 管理控制台</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa  fa-fw"></i> 国内短信<span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa  fa-envelope-o fa-fw"></i> 国内短信<span
+                                class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="smstest.html">测试</a>
@@ -95,7 +96,7 @@
                     </li>
 
                     <li>
-                        <a href="#"><i class="fa fa-fw"></i> 财务<span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-cny fa-fw "></i> 财务<span class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="offline_charge.html">线下充值</a>
@@ -111,8 +112,7 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa  fa-fw"></i> 设置<span
-                                class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-gears fa-fw"></i> 设置<span class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="sys_setting.html">系统设置</a>
@@ -124,7 +124,8 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa  fa-fw"></i> 邀请好友与分享<span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-share-alt fa-fw"></i> 邀请好友与分享<span
+                                class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="invite_friends.html">好友邀请</a>
@@ -143,7 +144,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">系统设置</h1>
+                <h1 class="page-header">重要信息</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -168,7 +169,7 @@
                         <!--去充值-->
                         <!--</button>-->
 
-                        <a href="#popCharge"  data-toggle="modal">
+                        <a href="#popCharge" data-toggle="modal">
                             <span class="pull-left">去充值</span>
                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
@@ -176,17 +177,23 @@
                     </div>
 
 
-
                     <!-- Modal -->
-                    <div class="modal fade" id="popCharge" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="popCharge" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+                         aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                    <button type="button" class="close" data-dismiss="modal"
+                                            aria-hidden="true">&times;</button>
                                     <h4 class="modal-title" id="myModalLabel">Modal title</h4>
                                 </div>
                                 <div class="modal-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                                    deserunt mollit anim id est laborum.
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
