--- a/admin/smstest.html
+++ b/admin/smstest.html
@@ -48,7 +48,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">SMS Pai</a>
+            <a class="navbar-brand" href="main.html">SMS Pai</a>
         </div>
         <!-- /.navbar-header -->
 
@@ -63,7 +63,7 @@
                     <li><a href="#"><i class="fa fa-gear fa-fw"></i> 帐户设置</a>
                     </li>
                     <li class="divider"></li>
-                    <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> 退出</a>
+                    <li><a href="../pages/login.html"><i class="fa fa-sign-out fa-fw"></i> 退出</a>
                     </li>
                 </ul>
                 <!-- /.dropdown-user -->
@@ -76,10 +76,11 @@
             <div class="sidebar-nav navbar-collapse">
                 <ul class="nav" id="side-menu">
                     <li>
-                        <a href="index.html"><i class="fa  fa-fw"></i> 管理控制台</a>
+                        <a href="main.html"><i class="fa  fa-fw"></i> 管理控制台</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa  fa-fw"></i> 国内短信<span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa  fa-envelope-o fa-fw"></i> 国内短信<span
+                                class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="smstest.html">测试</a>
@@ -95,14 +96,14 @@
                     </li>
 
                     <li>
-                        <a href="#"><i class="fa fa-fw"></i> 财务<span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-cny fa-fw "></i> 财务<span class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a href="panels-wells.html">充值</a>
+                                <a href="offline_charge.html">线下充值</a>
                             </li>
-                            <li>
-                                <a href="buttons.html">发票申请</a>
-                            </li>
+                            <!--<li>-->
+                            <!--<a href="buttons.html">发票申请</a>-->
+                            <!--</li>-->
                             <!--<li>-->
                             <!--<a href="buttons.html">日账单</a>-->
                             <!--</li>-->
@@ -111,8 +112,7 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa  fa-fw"></i> 设置<span
-                                class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-gears fa-fw"></i> 设置<span class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="sys_setting.html">系统设置</a>
@@ -124,7 +124,8 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa  fa-fw"></i> 邀请好友与分享<span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-share-alt fa-fw"></i> 邀请好友与分享<span
+                                class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="invite_friends.html">好友邀请</a>
@@ -141,53 +142,66 @@
     </nav>
 
     <div id="page-wrapper">
+
+
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">短信签名</h1>
+                <h1 class="page-header">短信测试</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
-        <!-- /.row -->
-        <div class="col-lg-10">
-            <div class="panel panel-default">
 
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <!-- Nav tabs -->
-                    <ul class="nav nav-pills">
-                        <li class="active"><a href="#sign-pills" data-toggle="tab">签名</a>
-                        </li>
-                        <li><a href="#template-pills" data-toggle="tab">短信模板</a>
-                        </li>
-                        </li>
-                    </ul>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <form class="form-horizontal" role="form">
 
-                    <!-- Tab panes -->
-                    <div class="tab-content">
-                        <div class="tab-pane fade in active" id="sign-pills">
-                            <h4>Home Tab</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                                mollit anim id est laborum.</p>
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label">手机号</label>
+                                        <div class="col-sm-10">
+                                            <input class="form-control" type="text">
+                                        </div>
+                                    </div>
+
+
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label">选择签名</label>
+                                        <div class="col-sm-10">
+                                            <select class="form-control">
+                                                <option>选择1</option>
+                                                <option>选择2</option>
+                                                <option>选择3</option>
+                                            </select>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label">短信预览</label>
+                                        <div class="col-lg-6">
+                                            <div class="well">
+                                                <p class="form-control-static">你发送的验证码是：1234。sms pai</p>
+                                            </div>
+                                            <a href="#sendtest" class="btn btn-primary btn-sm">发送</a>
+
+                                        </div>
+                                    </div>
+
+                                </form>
+                            </div>
                         </div>
-                        <div class="tab-pane fade" id="template-pills">
-                            <h4>Profile Tab</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                                mollit anim id est laborum.</p>
-                        </div>
+                        <!-- /.row (nested) -->
                     </div>
+                    <!-- /.panel-body -->
                 </div>
-                <!-- /.panel-body -->
+                <!-- /.row (nested) -->
             </div>
-            <!-- /.panel -->
+            <!-- /.panel-body -->
+
         </div>
+
 
 
     </div>
@@ -214,25 +228,8 @@
     <!-- Page-Level Demo Scripts - Tables - Use for reference -->
     <script>
 
-
-        $('#home-pills').DataTable({
-            ajax: '/api/myData', //请求的地址
-            columns: [
-                {data: 'name'},
-                {data: 'mobile'},
-                {data: 'status'}
-            ]
-        });
-        $('#messages-pills').DataTable({
-            ajax: '/api/messages-pills', //请求的地址
-            columns: [
-                {data: 'name'},
-                {data: 'mobile'},
-                {data: 'status'}
-            ]
-        });
-        $('#home-pills').DataTable({
-            ajax: '/api/myData', //请求的地址
+        $('#sendtest').DataTable({
+            ajax: '/api/sendtest', //请求的地址
             columns: [
                 {data: 'name'},
                 {data: 'mobile'},
