--- a/admin/smstest.html
+++ b/admin/smstest.html
@@ -43,10 +43,8 @@
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
+                    class="icon-bar"></span> <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="main.html">SMS Pai</a>
         </div>
@@ -54,9 +52,8 @@
 
         <ul class="nav navbar-top-links navbar-right">
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-                </a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-user fa-fw"></i> <i
+                        class="fa fa-caret-down"></i> </a>
                 <ul class="dropdown-menu dropdown-user">
                     <li><a href="#"><i class="fa fa-user fa-fw"></i> 个人信息</a>
                     </li>
@@ -82,14 +79,19 @@
                         <a href="#"><i class="fa  fa-envelope-o fa-fw"></i> 国内短信<span
                                 class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
+
                             <li>
                                 <a href="smstest.html">测试</a>
                             </li>
                             <li>
-                                <a href="sign.html">签名/模板报备</a>
+                                <a href="sendsms.html">短信发送</a>
                             </li>
+
                             <li>
                                 <a href="smsorder.html">短信记录</a>
+                            </li>
+                            <li>
+                                <a href="sign.html">签名/模板报备</a>
                             </li>
                         </ul>
                         <!-- /.nav-second-level -->
@@ -180,9 +182,9 @@
 
                                     <div class="form-group">
                                         <label class="col-sm-2 control-label">短信预览</label>
-                                        <div class="col-lg-6">
+                                        <div class="col-sm-10">
                                             <div class="well">
-                                                <p class="form-control-static">你发送的验证码是：1234。sms pai</p>
+                                                <p class=" form-control-static">你发送的验证码是：1234。sms pai</p>
                                             </div>
                                             <a href="#sendtest" class="btn btn-primary btn-sm">发送</a>
 
