--- a/admin/main.html
+++ b/admin/main.html
@@ -27,11 +27,9 @@
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// --><!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
 
 </head>
 
@@ -43,10 +41,8 @@
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
+                    class="icon-bar"></span> <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="main.html">SMS Pai</a>
         </div>
@@ -54,9 +50,8 @@
 
         <ul class="nav navbar-top-links navbar-right">
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-                </a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-user fa-fw"></i> <i
+                        class="fa fa-caret-down"></i> </a>
                 <ul class="dropdown-menu dropdown-user">
                     <li><a href="#"><i class="fa fa-user fa-fw"></i> 个人信息</a>
                     </li>
@@ -82,14 +77,19 @@
                         <a href="#"><i class="fa  fa-envelope-o fa-fw"></i> 国内短信<span
                                 class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
+
                             <li>
                                 <a href="smstest.html">测试</a>
                             </li>
                             <li>
-                                <a href="sign.html">签名/模板报备</a>
+                                <a href="sendsms.html">短信发送</a>
                             </li>
+
                             <li>
                                 <a href="smsorder.html">短信记录</a>
+                            </li>
+                            <li>
+                                <a href="sign.html">签名/模板报备</a>
                             </li>
                         </ul>
                         <!-- /.nav-second-level -->
@@ -154,8 +154,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <div class="row">
-                            <div class="col-xs-3">
-                            </div>
+                            <div class="col-xs-3"></div>
                             <div class="col-xs-9 text-left">
                                 <div class="huge">江涛</div>
                                 <div>账户余额：8元</div>
@@ -169,9 +168,8 @@
                         <!--去充值-->
                         <!--</button>-->
 
-                        <a href="#popCharge" data-toggle="modal">
-                            <span class="pull-left">去充值</span>
-                            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                        <a href="#popCharge" data-toggle="modal"> <span class="pull-left">去充值</span> <span
+                                class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
                         </a>
                     </div>
@@ -222,8 +220,8 @@
                     </div>
                     <a href="smsorder.html">
                         <div class="panel-footer">
-                            <span class="pull-left">更多信息</span>
-                            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                            <span class="pull-left">更多信息</span> <span class="pull-right"><i
+                                class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
                         </div>
                     </a>
@@ -237,17 +235,11 @@
                     <!-- /.panel-heading -->
                     <div class="panel-body">
                         <div class="list-group">
-                            <a href="#" class="list-group-item">
-                                <i class="fa  fa-fw"></i> 1.国家信息。。。
+                            <a href="#" class="list-group-item"> <i class="fa  fa-fw"></i> 1.国家信息。。。
 
-                            </a>
-                            <a href="#" class="list-group-item">
-                                <i class="fa  fa-fw"></i> 1.国家信息。。。
+                            </a> <a href="#" class="list-group-item"> <i class="fa  fa-fw"></i> 1.国家信息。。。
 
-                            </a>
-                            <a href="#" class="list-group-item">
-                                <i class="fa  fa-fw"></i> 1.国家信息。。。
-                            </a>
+                        </a> <a href="#" class="list-group-item"> <i class="fa  fa-fw"></i> 1.国家信息。。。 </a>
                         </div>
                         <!-- /.list-group -->
                         <a href="#" class="btn btn-default btn-block">查看所有</a>
