--- a/admin/sys_setting.html
+++ b/admin/sys_setting.html
@@ -26,26 +26,29 @@
     <!-- Custom Fonts -->
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <!-- DataTables CSS -->
+    <link href="../vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
+    <!-- DataTables Responsive CSS -->
+    <link href="../vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
+
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// --><!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
 
 </head>
 
 <body>
 
 <div id="wrapper">
+
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
+                    class="icon-bar"></span> <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="main.html">SMS Pai</a>
         </div>
@@ -53,9 +56,8 @@
 
         <ul class="nav navbar-top-links navbar-right">
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-                </a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-user fa-fw"></i> <i
+                        class="fa fa-caret-down"></i> </a>
                 <ul class="dropdown-menu dropdown-user">
                     <li><a href="#"><i class="fa fa-user fa-fw"></i> 个人信息</a>
                     </li>
@@ -81,14 +83,19 @@
                         <a href="#"><i class="fa  fa-envelope-o fa-fw"></i> 国内短信<span
                                 class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
+
                             <li>
                                 <a href="smstest.html">测试</a>
                             </li>
                             <li>
-                                <a href="sign.html">签名/模板报备</a>
+                                <a href="sendsms.html">短信发送</a>
                             </li>
+
                             <li>
                                 <a href="smsorder.html">短信记录</a>
+                            </li>
+                            <li>
+                                <a href="sign.html">签名/模板报备</a>
                             </li>
                         </ul>
                         <!-- /.nav-second-level -->
@@ -140,118 +147,165 @@
         <!-- /.navbar-static-side -->
     </nav>
 
+
     <div id="page-wrapper">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">系统设置</h1>
-            </div>
-            <!-- /.col-lg-12 -->
-        </div>
         <!-- /.row -->
-        <div class="row ">
-            <div class="col-lg-4">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-xs-3">
-                            </div>
-                            <div class="col-xs-9 text-left">
-                                <div class="huge">江涛</div>
-                                <div>账户余额：8元</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel-footer">
-
-                        <!--<button class="btn  btn-primary btn-lg" data-toggle="modal" data-target="#popCharge">-->
-                        <!--<button class="pull-left" data-toggle="modal" data-target="#popCharge">-->
-                        <!--去充值-->
-                        <!--</button>-->
-
-                        <a href="#popCharge"  data-toggle="modal">
-                            <span class="pull-left">去充值</span>
-                            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                            <div class="clearfix"></div>
-                        </a>
-                    </div>
-
-
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="popCharge" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                                </div>
-                                <div class="modal-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
-                                </div>
-                            </div>
-                            <!-- /.modal-content -->
-                        </div>
-                        <!-- /.modal-dialog -->
-                    </div>
-                    <!-- /.modal -->
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="panel panel-green">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <i class="fa  fa-5x"></i>
-                            </div>
-                            <div class="col-xs-9 text-right">
-                                <div class="huge">今日数据</div>
-                                <div>发送条数：990条</div>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="smsorder.html">
-                        <div class="panel-footer">
-                            <span class="pull-left">更多信息</span>
-                            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                            <div class="clearfix"></div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-4">
+        <div class="row">
+            <div class="col-lg-10">
                 <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <i class="fa  fa-fw"></i> 公告信息
-                    </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
-                        <div class="list-group">
-                            <a href="#" class="list-group-item">
-                                <i class="fa  fa-fw"></i> 1.国家信息。。。
 
-                            </a>
-                            <a href="#" class="list-group-item">
-                                <i class="fa  fa-fw"></i> 1.国家信息。。。
+                        <!-- Nav tabs -->
+                        <ul class="nav nav-tabs">
+                            <li class="active"><a href="#black-bill" data-toggle="tab">添加黑名单</a></li>
+                            <!--<li><a href="#template-pills" data-toggle="tab">短信模板</a></li>-->
+                        </ul>
 
-                            </a>
-                            <a href="#" class="list-group-item">
-                                <i class="fa  fa-fw"></i> 1.国家信息。。。
-                            </a>
+                        <!-- Tab panes -->
+                        <div class="tab-content">
+                            <div class="tab-pane fade in active" id="black-bill">
+
+                                <!--添加签名-->
+                                <div class="panel-group">
+                                    <h5>添加黑名单</h5>
+                                    <textarea id="sign" class="form-control" rows="5"></textarea> <br>
+                                    <p class="help-block">请把手机号码用逗号(,)隔开，如：18612345678,18612345679,18612345670</p>
+                                    <p><a href="#addSign" class="btn btn-primary btn-xs">保存</a></p>
+                                </div>
+
+                                <!--datatables -->
+                                <!--datatables 列表名-->
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <h3 class="page-header">黑名单列表</h3>
+                                    </div>
+                                    <!-- /.col-lg-12 -->
+                                </div>
+                                <!-- /.row -->
+                                <!--签名列表-->
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <div class="panel panel-default">
+                                            <!--<div class="panel-heading">-->
+                                            <!--签名列表-->
+                                            <!--</div>-->
+                                            <!-- /.panel-heading -->
+                                            <div class="panel-body">
+                                                <table width="100%"
+                                                       class="table table-striped table-bordered table-hover"
+                                                       id="dataTables-blackbill">
+                                                    <thead>
+                                                    <tr>
+                                                        <th>Rendering engine</th>
+                                                        <th>Browser</th>
+                                                        <th>Platform(s)</th>
+                                                        <th>Engine version</th>
+                                                        <th>CSS grade</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+
+                                                    <tr class="gradeA">
+                                                        <td>Gecko</td>
+                                                        <td>Netscape 7.2</td>
+                                                        <td>Win 95+ / Mac OS 8.6-9.2</td>
+                                                        <td class="center">1.7</td>
+                                                        <td class="center">A</td>
+                                                    </tr>
+                                                    <tr class="gradeA">
+                                                        <td>Gecko</td>
+                                                        <td>Netscape Browser 8</td>
+                                                        <td>Win 98SE+</td>
+                                                        <td class="center">1.7</td>
+                                                        <td class="center">A</td>
+                                                    </tr>
+
+                                                    <tr class="gradeA">
+                                                        <td>Presto</td>
+                                                        <td>Opera 8.0</td>
+                                                        <td>Win 95+ / OSX.2+</td>
+                                                        <td class="center">-</td>
+                                                        <td class="center">A</td>
+                                                    </tr>
+                                                    <tr class="gradeA">
+                                                        <td>Presto</td>
+                                                        <td>Opera 8.5</td>
+                                                        <td>Win 95+ / OSX.2+</td>
+                                                        <td class="center">-</td>
+                                                        <td class="center">A</td>
+                                                    </tr>
+                                                    <tr class="gradeA">
+                                                        <td>Presto</td>
+                                                        <td>Opera 9.0</td>
+                                                        <td>Win 95+ / OSX.3+</td>
+                                                        <td class="center">-</td>
+                                                        <td class="center">A</td>
+                                                    </tr>
+                                                    <tr class="gradeA">
+                                                        <td>Presto</td>
+                                                        <td>Opera 9.2</td>
+                                                        <td>Win 88+ / OSX.3+</td>
+                                                        <td class="center">-</td>
+                                                        <td class="center">A</td>
+                                                    </tr>
+                                                    <tr class="gradeA">
+                                                        <td>Presto</td>
+                                                        <td>Opera 9.5</td>
+                                                        <td>Win 88+ / OSX.3+</td>
+                                                        <td class="center">-</td>
+                                                        <td class="center">A</td>
+                                                    </tr>
+                                                    <tr class="gradeA">
+                                                        <td>Presto</td>
+                                                        <td>Opera for Wii</td>
+                                                        <td>Wii</td>
+                                                        <td class="center">-</td>
+                                                        <td class="center">A</td>
+                                                    </tr>
+                                                    <tr class="gradeA">
+                                                        <td>Presto</td>
+                                                        <td>Nokia N800</td>
+                                                        <td>N800</td>
+                                                        <td class="center">-</td>
+                                                        <td class="center">A</td>
+                                                    </tr>
+
+                                                    <tr class="gradeU">
+                                                        <td>Other browsers</td>
+                                                        <td>All others</td>
+                                                        <td>-</td>
+                                                        <td class="center">-</td>
+                                                        <td class="center">U</td>
+                                                    </tr>
+                                                    <tr class="gradeU">
+                                                        <td>Other browsers</td>
+                                                        <td>All others</td>
+                                                        <td>-</td>
+                                                        <td class="center">-</td>
+                                                        <td class="center">U</td>
+                                                    </tr>
+                                                    </tbody>
+                                                </table>
+
+                                            </div>
+                                            <!-- /.panel-body -->
+                                        </div>
+                                        <!-- /.panel -->
+                                    </div>
+                                    <!-- /.col-lg-12 -->
+                                </div>
+
+                            </div>
+
+
                         </div>
-                        <!-- /.list-group -->
-                        <a href="#" class="btn btn-default btn-block">查看所有</a>
                     </div>
                     <!-- /.panel-body -->
                 </div>
-
+                <!-- /.panel -->
             </div>
-
         </div>
-
 
     </div>
     <!-- /#wrapper -->
@@ -273,6 +327,36 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
+
+    <!-- DataTables JavaScript -->
+    <script src="../vendor/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="../vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
+    <script src="../vendor/datatables-responsive/dataTables.responsive.js"></script>
+
+
+    <!-- Page-Level Demo Scripts - Tables - Use for reference -->
+    <script>
+
+        //       数据表
+        $(document).ready(function () {
+            $('#dataTables-blackbill').DataTable({
+                responsive: true
+            });
+        });
+
+
+        $('#home-pills').DataTable({
+            ajax: '/api/myData', //请求的地址
+            columns: [
+                {data: 'name'},
+                {data: 'mobile'},
+                {data: 'status'}
+            ]
+        });
+
+
+    </script>
+
 
 </body>
 
