--- a/admin/invoice.html
+++ b/admin/invoice.html
@@ -100,16 +100,19 @@
                     <li>
                         <a href="#"><i class="fa fa-cny fa-fw "></i> 财务<span class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li>
-                                <a href="offline_charge.html">线下充值</a>
-                            </li>
+
                             <!--<li>-->
                             <!--<a href="buttons.html">发票申请</a>-->
                             <!--</li>-->
                             <!--<li>-->
                             <!--<a href="buttons.html">日账单</a>-->
                             <!--</li>-->
-
+                            <li>
+                                <a href="charge.html">充值</a>
+                            </li>
+                            <li>
+                                <a href="invoice.html">发票申请</a>
+                            </li>
                         </ul>
                         <!-- /.nav-second-level -->
                     </li>
@@ -146,32 +149,47 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">重要信息</h1>
+                <h1 class="page-header">发票申请</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
         <!-- /.row -->
         <div class="row ">
-            <div class="col-lg-4">
-                <div class="panel panel-primary">
+            <div class="col-lg-12">
+                <div class="panel">
                     <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-xs-3">
+                        <form class="form-horizontal" role="form">
+
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">请输入公司名称</label>
+                                <div class="col-sm-10">
+                                    <input class="form-control" type="text">
+                                </div>
                             </div>
-                            <div class="col-xs-9 text-left">
-                                <div class="huge">江涛</div>
-                                <div>账户余额：8元</div>
+
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">联系电话</label>
+                                <div class="col-sm-10">
+                                    <input class="form-control" type="text" placeholder="请填手机号码">
+                                </div>
                             </div>
-                        </div>
+                            <!--<div class="form-group">-->
+                            <!--<label class="col-sm-2 control-label">免费短信提醒</label>-->
+                            <!--<div class="col-sm-10">-->
+                            <!--<input class="form-control" type="text" placeholder="请填手机号码">-->
+                            <!--</div>-->
+                            <!--</div>-->
+                            <!--提交-->
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label"></label>
+                                <div class="col-sm-10">
+                                    <a href="#sendtest" class="btn btn-primary btn-sm">申请</a>
+                                </div>
+                            </div>
+
+
+                        </form>
                     </div>
-                    <a href="offline_charge.html">
-                        <div class="panel-footer">
-                            <span class="pull-left">去充值</span>
-                            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                            <div class="clearfix"></div>
-                        </div>
-                    </a>
-                </div>
             </div>
 
         </div>
