--- a/admin/smsorder.html
+++ b/admin/smsorder.html
@@ -100,16 +100,19 @@
                     <li>
                         <a href="#"><i class="fa fa-cny fa-fw "></i> 财务<span class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li>
-                                <a href="offline_charge.html">线下充值</a>
-                            </li>
+
                             <!--<li>-->
                             <!--<a href="buttons.html">发票申请</a>-->
                             <!--</li>-->
                             <!--<li>-->
                             <!--<a href="buttons.html">日账单</a>-->
                             <!--</li>-->
-
+                            <li>
+                                <a href="charge.html">充值</a>
+                            </li>
+                            <li>
+                                <a href="invoice.html">发票申请</a>
+                            </li>
                         </ul>
                         <!-- /.nav-second-level -->
                     </li>
