--- a/admin/main.html
+++ b/admin/main.html
@@ -98,16 +98,19 @@
                     <li>
                         <a href="#"><i class="fa fa-cny fa-fw "></i> 财务<span class="glyphicon arrow"></span></a>
                         <ul class="nav nav-second-level">
-                            <li>
-                                <a href="offline_charge.html">线下充值</a>
-                            </li>
+
                             <!--<li>-->
                             <!--<a href="buttons.html">发票申请</a>-->
                             <!--</li>-->
                             <!--<li>-->
-                            <!--<a href="buttons.html">日账单</a>-->
+                                <!--<a href="buttons.html">日账单</a>-->
                             <!--</li>-->
-
+                            <li>
+                                <a href="charge.html">充值</a>
+                            </li>
+                            <li>
+                                <a href="invoice.html">发票申请</a>
+                            </li>
                         </ul>
                         <!-- /.nav-second-level -->
                     </li>
@@ -142,89 +145,78 @@
     </nav>
 
     <div id="page-wrapper">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">重要信息</h1>
-            </div>
-            <!-- /.col-lg-12 -->
-        </div>
+        <!--<div class="row">-->
+        <!--<div class="col-lg-12">-->
+        <!--<h1 class="page-header">重要信息</h1>-->
+        <!--</div>-->
+        <!--&lt;!&ndash; /.col-lg-12 &ndash;&gt;-->
+        <!--</div>-->
         <!-- /.row -->
         <div class="row ">
-            <div class="col-lg-4">
-                <div class="panel panel-primary">
+            <div class="col-lg-4 ">
+                <div class="panel panel-default">
                     <div class="panel-heading">
+                        个人信息
+                    </div>
+                    <div class="panel-body">
+                        <div class="col-xs-3"></div>
+                        <div class="col-xs-9 text-left">
+                            <div class="huge">江涛</div>
+                            <div>账户余额：8元</div>
+                        </div>
+
+
+                        <!--<span class="pull-right">-->
+                        <!--<button class="btn btn-primary btn-sm " data-toggle="modal" data-target="#popCharge">-->
+                        <!--去充值-->
+                        <!--</button>-->
+                        <!--</span>-->
+                    </div>
+                    <div class="panel-footer">
+                        <a href="charge.html"> <span class="pull-left">去充值</span> <span class="pull-right">
+                            <i class="fa fa-arrow-circle-right"></i> </span>
+                            <div class="clearfix"></div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        今日数据
+                    </div>
+                    <div class="panel-body ">
                         <div class="row">
-                            <div class="col-xs-3"></div>
-                            <div class="col-xs-9 text-left">
-                                <div class="huge">江涛</div>
-                                <div>账户余额：8元</div>
+                            <!--todo 如何设置间距，看这里-->
+                            <!--<div class="col-xs-3">-->
+                            <!--<i class="fa  fa-5x"></i>-->
+                            <!--</div>-->
+                            <div class="form-group">
+                                <label class="col-sm-5 text-right ">发送条数：</label>
+                                <div class="col-sm-5">
+                                    <p class="text-left">990条</p>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-5 text-right">成功条数：</label>
+                                <div class="col-sm-5">
+                                    <p class="text-left">990条</p>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-5 text-right">异常条数：</label>
+                                <div class="col-sm-5">
+                                    <p class="text-left">990条</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="panel-footer">
-
-                        <!--<button class="btn  btn-primary btn-lg" data-toggle="modal" data-target="#popCharge">-->
-                        <!--<button class="pull-left" data-toggle="modal" data-target="#popCharge">-->
-                        <!--去充值-->
-                        <!--</button>-->
-
-                        <a href="#popCharge" data-toggle="modal"> <span class="pull-left">去充值</span> <span
-                                class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                        <a href="smsorder.html"> <span class="pull-left">更多信息</span> <span class="pull-right"><i
+                                class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
                         </a>
                     </div>
-
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="popCharge" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-                         aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal"
-                                            aria-hidden="true">&times;</button>
-                                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                                </div>
-                                <div class="modal-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                                    deserunt mollit anim id est laborum.
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
-                                </div>
-                            </div>
-                            <!-- /.modal-content -->
-                        </div>
-                        <!-- /.modal-dialog -->
-                    </div>
-                    <!-- /.modal -->
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="panel panel-green">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <i class="fa  fa-5x"></i>
-                            </div>
-                            <div class="col-xs-9 text-right">
-                                <div class="huge">今日数据</div>
-                                <div>发送条数：990条</div>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="smsorder.html">
-                        <div class="panel-footer">
-                            <span class="pull-left">更多信息</span> <span class="pull-right"><i
-                                class="fa fa-arrow-circle-right"></i></span>
-                            <div class="clearfix"></div>
-                        </div>
-                    </a>
                 </div>
             </div>
             <div class="col-lg-4">
