--- a/admin/account_setting.html
+++ b/admin/account_setting.html
@@ -162,7 +162,7 @@
                         </ul>
 
                         <!-- Tab panes -->
-                        <div class="tab-content">
+                        <div class="tab-content small">
                             <div class="tab-pane fade in active" id="account-pills">
                                 <form class="form-horizontal" role="form">
                                     <div class="form-group">
