--- a/admin/sign.html
+++ b/admin/sign.html
@@ -175,7 +175,7 @@
                         </ul>
 
                         <!-- Tab panes -->
-                        <div class="tab-content">
+                        <div class="tab-content small">
                             <div class="tab-pane fade in active" id="sign-pills">
 
                                 <!--添加签名-->
