--- a/admin/smsorder.html
+++ b/admin/smsorder.html
@@ -168,7 +168,7 @@
                         </ul>
 
                         <!-- Tab panes -->
-                        <div class="tab-content">
+                        <div class="tab-content small">
                             <div class="tab-pane fade in active" id="smsSendOrder-pills">
                                 <!--datatables -->
                                 <!--datatables 列表名-->
