--- a/admin/smstest.html
+++ b/admin/smstest.html
@@ -162,7 +162,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-lg-6">
-                                <form class="form-horizontal" role="form">
+                                <form class="form-horizontal small" role="form">
 
                                     <div class="form-group">
                                         <label class="col-sm-2 control-label">手机号</label>
