--- a/admin/invoice.html
+++ b/admin/invoice.html
@@ -158,7 +158,7 @@
             <div class="col-lg-12">
                 <div class="panel">
                     <div class="panel-heading">
-                        <form class="form-horizontal" role="form">
+                        <form class="form-horizontal small" role="form">
 
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">请输入公司名称</label>
