--- a/admin/main.html
+++ b/admin/main.html
@@ -158,7 +158,7 @@
                     <div class="panel-heading">
                         个人信息
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body small ">
                         <div class="col-xs-3"></div>
                         <div class="col-xs-9 text-left">
                             <div class="huge">江涛</div>
@@ -172,7 +172,7 @@
                         <!--</button>-->
                         <!--</span>-->
                     </div>
-                    <div class="panel-footer">
+                    <div class="panel-footer small">
                         <a href="charge.html"> <span class="pull-left">去充值</span> <span class="pull-right">
                             <i class="fa fa-arrow-circle-right"></i> </span>
                             <div class="clearfix"></div>
@@ -185,7 +185,7 @@
                     <div class="panel-heading">
                         今日数据
                     </div>
-                    <div class="panel-body ">
+                    <div class="panel-body small">
                         <div class="row">
                             <!--todo 如何设置间距，看这里-->
                             <!--<div class="col-xs-3">-->
@@ -211,7 +211,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel-footer">
+                    <div class="panel-footer small">
                         <a href="smsorder.html"> <span class="pull-left">更多信息</span> <span class="pull-right"><i
                                 class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
