--- a/admin/sys_setting.html
+++ b/admin/sys_setting.html
@@ -165,7 +165,7 @@
                         </ul>
 
                         <!-- Tab panes -->
-                        <div class="tab-content">
+                        <div class="tab-content small">
                             <div class="tab-pane fade in active" id="black-bill">
 
                                 <!--添加签名-->
