--- a/admin/invoice.html
+++ b/admin/invoice.html
@@ -43,8 +43,10 @@
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
-                    class="icon-bar"></span> <span class="icon-bar"></span>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="main.html">SMS Pai</a>
         </div>
@@ -52,8 +54,8 @@
 
         <ul class="nav navbar-top-links navbar-right">
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-user fa-fw"></i> <i
-                        class="fa fa-caret-down"></i> </a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-user fa-fw"></i>
+                    <i class="fa fa-caret-down"></i> </a>
                 <ul class="dropdown-menu dropdown-user">
                     <li><a href="#"><i class="fa fa-user fa-fw"></i> 个人信息</a>
                     </li>
@@ -76,8 +78,9 @@
                         <a href="main.html"><i class="fa  fa-fw"></i> 管理控制台</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa  fa-envelope-o fa-fw"></i> 国内短信<span
-                                class="glyphicon arrow"></span></a>
+                        <a href="#"><i class="fa  fa-envelope-o fa-fw"></i> 国内短信
+                            <span class="glyphicon arrow"></span>
+                        </a>
                         <ul class="nav nav-second-level">
 
                             <li>
@@ -98,7 +101,9 @@
                     </li>
 
                     <li>
-                        <a href="#"><i class="fa fa-cny fa-fw "></i> 财务<span class="glyphicon arrow"></span></a>
+                        <a href="#"><i class="fa fa-cny fa-fw "></i> 财务
+                            <span class="glyphicon arrow"></span>
+                        </a>
                         <ul class="nav nav-second-level">
 
                             <!--<li>-->
@@ -117,7 +122,9 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-gears fa-fw"></i> 设置<span class="glyphicon arrow"></span></a>
+                        <a href="#"><i class="fa fa-gears fa-fw"></i> 设置
+                            <span class="glyphicon arrow"></span>
+                        </a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="sys_setting.html">系统设置</a>
@@ -129,8 +136,9 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-share-alt fa-fw"></i> 邀请好友与分享<span
-                                class="glyphicon arrow"></span></a>
+                        <a href="#"><i class="fa fa-share-alt fa-fw"></i> 邀请好友与分享
+                            <span class="glyphicon arrow"></span>
+                        </a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="invite_friends.html">好友邀请</a>
@@ -190,31 +198,31 @@
 
                         </form>
                     </div>
+                </div>
+
             </div>
-
         </div>
-
-
     </div>
-    <!-- /#wrapper -->
+</div>
+<!-- /#wrapper -->
 
 
-    <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
+<!-- jQuery -->
+<script src="../vendor/jquery/jquery.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
+<!-- Metis Menu Plugin JavaScript -->
+<script src="../vendor/metisMenu/metisMenu.min.js"></script>
 
-    <!-- Morris Charts JavaScript -->
-    <script src="../vendor/raphael/raphael.min.js"></script>
-    <script src="../vendor/morrisjs/morris.min.js"></script>
-    <script src="../data/morris-data.js"></script>
+<!-- Morris Charts JavaScript -->
+<script src="../vendor/raphael/raphael.min.js"></script>
+<script src="../vendor/morrisjs/morris.min.js"></script>
+<script src="../data/morris-data.js"></script>
 
-    <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
+<!-- Custom Theme JavaScript -->
+<script src="../dist/js/sb-admin-2.js"></script>
 
 </body>
 
