--- a/admin/sign.html
+++ b/admin/sign.html
@@ -474,58 +474,58 @@
 
     </div>
     <!-- /#wrapper -->
+</div>
+
+<!-- jQuery -->
+<script src="../vendor/jquery/jquery.min.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+
+<!-- Metis Menu Plugin JavaScript -->
+<script src="../vendor/metisMenu/metisMenu.min.js"></script>
+
+<!-- Morris Charts JavaScript -->
+<script src="../vendor/raphael/raphael.min.js"></script>
+<script src="../vendor/morrisjs/morris.min.js"></script>
+<script src="../data/morris-data.js"></script>
+
+<!-- Custom Theme JavaScript -->
+<script src="../dist/js/sb-admin-2.js"></script>
 
 
-    <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
-
-    <!-- Morris Charts JavaScript -->
-    <script src="../vendor/raphael/raphael.min.js"></script>
-    <script src="../vendor/morrisjs/morris.min.js"></script>
-    <script src="../data/morris-data.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
+<!-- DataTables JavaScript -->
+<script src="../vendor/datatables/js/jquery.dataTables.min.js"></script>
+<script src="../vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
+<script src="../vendor/datatables-responsive/dataTables.responsive.js"></script>
 
 
-    <!-- DataTables JavaScript -->
-    <script src="../vendor/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="../vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
-    <script src="../vendor/datatables-responsive/dataTables.responsive.js"></script>
+<!-- Page-Level Demo Scripts - Tables - Use for reference -->
+<script>
 
-
-    <!-- Page-Level Demo Scripts - Tables - Use for reference -->
-    <script>
-
-        //        两个数据表
-        $(document).ready(function () {
-            $('#dataTables-sign').DataTable({
-                responsive: true
-            });
+    //        两个数据表
+    $(document).ready(function () {
+        $('#dataTables-sign').DataTable({
+            responsive: true
         });
-        $(document).ready(function () {
-            $('#dataTables-template').DataTable({
-                responsive: true
-            });
+    });
+    $(document).ready(function () {
+        $('#dataTables-template').DataTable({
+            responsive: true
         });
+    });
 
-        $('#home-pills').DataTable({
-            ajax: '/api/myData', //请求的地址
-            columns: [
-                {data: 'name'},
-                {data: 'mobile'},
-                {data: 'status'}
-            ]
-        });
+    $('#home-pills').DataTable({
+        ajax: '/api/myData', //请求的地址
+        columns: [
+            {data: 'name'},
+            {data: 'mobile'},
+            {data: 'status'}
+        ]
+    });
 
 
-    </script>
+</script>
 
 </body>
 
