--- a/admin/sys_setting.html
+++ b/admin/sys_setting.html
@@ -331,7 +331,7 @@
     </div>
     <!-- /#wrapper -->
 
-
+</div>
     <!-- jQuery -->
     <script src="../vendor/jquery/jquery.min.js"></script>
 
